# LLM_Knowledge_Extractor

./: README.md  SERVER_FIXES_SUMMARY.md  docker-compose.yml
apps/client/: Dockerfile  README.md  package-lock.json  package.json
apps/client/app/: layout.tsx  page.tsx
apps/client/app/hooks/: redux.ts  useAnalysis.ts  useDebounce.ts
apps/client/components/: AnalysisCard.tsx  AnalysisDetailModal.tsx  AnalysisModal.tsx  Header.tsx  Home.tsx  Providers.tsx
apps/client/lib/: actions.ts  api.ts  errorUtils.ts  store.ts  types.ts
apps/client/lib/redux/: store.ts
apps/client/lib/redux/components/: reduxProvider.tsx
apps/client/lib/redux/features/analysisDetail/: analysisDetailSlice.ts
apps/server/: Dockerfile  README.md  main.py  pyproject.toml  pyrightconfig.json  run_tests.py
apps/server/src/: __init__.py  config.py
apps/server/src/api/: __init__.py  routes.py
apps/server/src/api/v1/: __init__.py  dependencies.py
apps/server/src/api/v1/endpoints/: analysis.py
apps/server/src/api/v1/routes/: __init__.py  analysis.py
apps/server/src/core/: __init__.py  logging.py
apps/server/src/db/: __init__.py  database.py
apps/server/src/models/: __init__.py  analysis.py
apps/server/src/services/: __init__.py  analysis_service.py  llm_client.py
apps/server/src/utils/: __init__.py  errors.py  keywords.py  logging.py  prompts.py
apps/server/tests/: README.md  conftest.py  test_api_integration.py
prisma/: schema.prisma
prisma/migrations/20250912094541_dev/: migration.sql
prisma/migrations/20250914020704_dev/: migration.sql
(+2 files in other folders)
